# p4est

./: .cproject  .gitignore  .project  Doxyfile  Makefile  Makefile.am  Makefile.in  Makefile.p4est.mk  Makefile.p4est.pre  aclocal.m4  config.status  configure  libtool  p4est_setop2_rectangle_h.visit  p4est_setop2_rectangle_h_0000.vtu  p4est_setop2_rectangle_intersection.pvtu  p4est_setop2_rectangle_intersection.visit  p4est_setop2_rectangle_intersection_0000.vtu  p4est_setop2_rectangle_union.pvtu  p4est_setop2_rectangle_union.visit  p4est_setop2_rectangle_union_0000.vtu  p4est_setop2_rectangle_v_0000.vtu  p4est_setop3_cat1.pvtu  p4est_setop3_cat1.visit  p4est_setop3_cat1_0000.vtu  p4est_setop3_cat2.pvtu  p4est_setop3_cat2.visit  p4est_setop3_cat2_0000.vtu  p4est_setop3_cats_intersection.pvtu  p4est_setop3_cats_intersection.visit  p4est_setop3_cats_intersection_0000.vtu  p4est_setop3_cats_union.pvtu  p4est_setop3_cats_union.visit  p4est_setop3_cats_union_0000.vtu
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
example/set_operations/: .gitignore  Makefile.am  cat1.h  cat2.h  p4est_setop1  p4est_setop1.c  p4est_setop2  p4est_setop2.c  p4est_setop2_rectangle_h.pvtu  p4est_setop2_rectangle_h_0000.vtu  p4est_setop2_rectangle_v.pvtu  p4est_setop2_rectangle_v.visit  p4est_setop2_rectangle_v_0000.vtu  p4est_setop3  p4est_setop3.c  rect_horizontal1.h  rect_vertical1.h  rectangle_union.h
example/set_operations/.deps/: p4est_setop1.Po
example/set_operations/.libs/: p4est_setop1
example/xin/: api.c  (+10 more)
src/: libp4est.la  p4est.c  p4est.h  p4est_config.h  p4est_connectivity.c  p4est_to_p8est.h  p8est.h  pre_config.h  pre_config.h.in  src_libp4est_la-p4est.lo  src_libp4est_la-p4est_algorithms.lo  src_libp4est_la-p4est_balance.lo  src_libp4est_la-p4est_base.lo  src_libp4est_la-p4est_bits.lo  (+41 more)
(+208 files in other folders)
